@@ -1,0 +1,48 @@
+/* GdkPixbuf RGBA C-Source image dump */
+
+#ifdef __SUNPRO_C
+#pragma align 4 (black_loop_rgba)
+#endif
+#ifdef __GNUC__
+const unsigned char black_loop_rgba[] __attribute__ ((__aligned__ (4))) =
+#else
+const unsigned char black_loop_rgba[] =
+#endif
+{ ""
+  /* Pixbuf magic (0x47646b50) */
+  "GdkP"
+  /* length: header (24) + pixel_data (672) */
+  "\0\0\2\270"
+  /* pixdata_type (0x1010002) */
+  "\1\1\0\2"
+  /* rowstride (48) */
+  "\0\0\0""0"
+  /* width (12) */
+  "\0\0\0\14"
+  /* height (14) */
+  "\0\0\0\16"
+  /* pixel_data: */
+  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\206\0\0\0|\0\0\0\31\0\0\0\0\0"
+  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"
+  "o\0\0\0\377\0\0\0\362\0\0\0\247\0\0\0A\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"
+  "\0\0\0\0\0\0\0\0\0\0\0\0.\0\0\0\244\0\0\0\377\0\0\0\377\0\0\0\377\0\0"
+  "\0\375\0\0\0\265\0\0\0\11\0\0\0\0\0\0\0\0\0\0\0\7\0\0\0\232\0\0\0\376"
+  "\0\0\0\377\0\0\0\374\0\0\0\377\0\0\0\377\0\0\0\371\0\0\0^\0\0\0\0\0\0"
+  "\0\0\0\0\0\1\0\0\0\255\0\0\0\377\0\0\0\356\0\0\0\177\0\0\0\317\0\0\0"
+  "\377\0\0\0\374\0\0\0i\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0W\0\0\0\377\0\0\0"
+  "\345\0\0\0\"\0\0\0\0\0\0\0\222\0\0\0\376\0\0\0y\0\0\0\0\0\0\0\0\0\0\0"
+  "5\0\0\0@\0\0\0\275\0\0\0\377\0\0\0Z\0\0\0\0\0\0\0\0\0\0\0d\0\0\0\220"
+  "\0\0\0\0\0\0\0\0\0\0\0""7\0\0\0\375\0\0\0\273\0\0\0\357\0\0\0\377\0\0"
+  "\0\13\0\0\0\0\0\0\0\0\0\0\0\21\0\0\0\1\0\0\0\0\0\0\0\0\0\0\0\15\0\0\0"
+  "\377\0\0\0\356\0\0\0\365\0\0\0\375\0\0\0\4\0\0\0\0\0\0\0\0\0\0\0\0\0"
+  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\5\0\0\0\375\0\0\0\365\0\0\0\317\0\0\0\377"
+  "\0\0\0>\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0@\0\0\0"
+  "\377\0\0\0\316\0\0\0v\0\0\0\377\0\0\0\307\0\0\0\7\0\0\0\0\0\0\0\0\0\0"
+  "\0\0\0\0\0\0\0\0\0\10\0\0\0\312\0\0\0\377\0\0\0t\0\0\0\12\0\0\0\326\0"
+  "\0\0\377\0\0\0\310\0\0\0=\0\0\0\2\0\0\0\2\0\0\0\77\0\0\0\311\0\0\0\377"
+  "\0\0\0\325\0\0\0\11\0\0\0\0\0\0\0\40\0\0\0\324\0\0\0\377\0\0\0\377\0"
+  "\0\0\371\0\0\0\371\0\0\0\377\0\0\0\377\0\0\0\322\0\0\0\37\0\0\0\0\0\0"
+  "\0\0\0\0\0\0\0\0\0\10\0\0\0o\0\0\0\310\0\0\0\364\0\0\0\364\0\0\0\307"
+  "\0\0\0m\0\0\0\7\0\0\0\0\0\0\0\0"};
+
+const int black_loop_rgba_size = sizeof(black_loop_rgba);
