@@ -1,0 +1,57 @@
+/* GdkPixbuf RGBA C-Source image dump */
+
+#ifdef __SUNPRO_C
+#pragma align 4 (gray_loop_rgba)
+#endif
+#ifdef __GNUC__
+const unsigned char gray_loop_rgba[] __attribute__ ((__aligned__ (4))) =
+#else
+const unsigned char gray_loop_rgba[] =
+#endif
+{ ""
+  /* Pixbuf magic (0x47646b50) */
+  "GdkP"
+  /* length: header (24) + pixel_data (672) */
+  "\0\0\2\270"
+  /* pixdata_type (0x1010002) */
+  "\1\1\0\2"
+  /* rowstride (48) */
+  "\0\0\0""0"
+  /* width (12) */
+  "\0\0\0\14"
+  /* height (14) */
+  "\0\0\0\16"
+  /* pixel_data: */
+  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\300\276\263\206\277\275\257|\314\314"
+  "\302\31\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"
+  "\0\0\0\0\0\301\277\261o\270\265\242\377\271\267\245\362\274\272\253\247"
+  "\310\304\270A\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\267\267"
+  "\241.\274\267\246\244\270\265\242\377\270\265\242\377\270\265\242\377"
+  "\271\266\244\375\276\275\257\265\306\306\306\11\0\0\0\0\0\0\0\0\266\266"
+  "\222\7\270\264\242\232\270\265\242\376\270\265\242\377\271\265\243\374"
+  "\270\265\242\377\270\265\242\377\271\266\244\371\301\276\263^\0\0\0\0"
+  "\0\0\0\0\377\377\377\1\270\265\242\255\270\265\242\377\270\265\242\356"
+  "\271\265\243\177\274\271\250\317\270\265\242\377\271\266\243\374\302"
+  "\300\261i\0\0\0\0\0\0\0\0\0\0\0\0\271\266\241W\270\265\242\377\270\266"
+  "\241\345\274\264\245\"\0\0\0\0\275\271\255\222\270\265\242\376\300\276"
+  "\261y\0\0\0\0\0\0\0\0\267\267\2445\273\267\243@\267\265\242\275\270\265"
+  "\242\377\270\265\242Z\0\0\0\0\0\0\0\0\302\277\263d\277\275\261\220\0"
+  "\0\0\0\0\0\0\0\271\265\2427\270\265\242\375\270\265\242\273\270\265\242"
+  "\357\270\265\242\377\271\271\242\13\0\0\0\0\0\0\0\0\322\322\303\21\377"
+  "\377\377\1\0\0\0\0\0\0\0\0\261\261\235\15\270\265\242\377\270\265\242"
+  "\356\270\265\242\365\270\265\242\375\277\277\277\4\0\0\0\0\0\0\0\0\0"
+  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\314\314\231\5\270\265\242\375\270\265"
+  "\242\365\270\265\243\317\270\265\242\377\271\265\240>\0\0\0\0\0\0\0\0"
+  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\267\263\243@\270\265\242\377\270\265"
+  "\242\316\270\266\242v\270\265\242\377\271\265\241\307\266\266\222\7\0"
+  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\277\277\237\10\270\265\242\312\270\265"
+  "\242\377\271\264\243t\263\263\231\12\270\265\242\326\270\265\242\377"
+  "\270\265\242\310\270\264\243=\200\200\200\2\200\200\200\2\266\266\242"
+  "\77\270\265\242\311\270\265\242\377\270\265\242\325\252\252\252\11\0"
+  "\0\0\0\267\267\237\40\270\264\242\324\270\265\242\377\270\265\242\377"
+  "\270\265\242\371\270\265\242\371\270\265\242\377\270\265\242\377\271"
+  "\265\242\322\265\265\245\37\0\0\0\0\0\0\0\0\0\0\0\0\277\277\237\10\270"
+  "\265\243o\270\265\242\310\270\265\242\364\270\265\242\364\271\265\241"
+  "\307\271\264\241m\266\266\222\7\0\0\0\0\0\0\0\0"};
+
+const int gray_loop_rgba_size = sizeof(gray_loop_rgba);
