@@ -1,0 +1,36 @@
+/* GdkPixbuf RGBA C-Source image dump */
+
+#ifdef __SUNPRO_C
+#pragma align 4 (red_dot_rgba)
+#endif
+#ifdef __GNUC__
+const unsigned char red_dot_rgba[] __attribute__ ((__aligned__ (4))) =
+#else
+const unsigned char red_dot_rgba[] =
+#endif
+{ ""
+  /* Pixbuf magic (0x47646b50) */
+  "GdkP"
+  /* length: header (24) + pixel_data (256) */
+  "\0\0\1\30"
+  /* pixdata_type (0x1010002) */
+  "\1\1\0\2"
+  /* rowstride (32) */
+  "\0\0\0\40"
+  /* width (8) */
+  "\0\0\0\10"
+  /* height (8) */
+  "\0\0\0\10"
+  /* pixel_data: */
+  "\0\0\0\0\345OO\35\341MM\254\341MM\362\341MM\362\342MM\257\345NN'\0\0"
+  "\0\0\345OO\35\342MM\355\342MM\377\342MM\377\342MM\377\342MM\377\342M"
+  "M\356\345OO\35\341MM\254\342MM\377\342MM\377\342MM\377\342MM\377\342"
+  "MM\377\342MM\377\343MM\252\341MM\362\342MM\377\342MM\377\342MM\377\342"
+  "MM\377\342MM\377\342MM\377\342MM\361\341MM\362\342MM\377\342MM\377\342"
+  "MM\377\342MM\377\342MM\377\342MM\377\342MM\360\342MM\257\342MM\377\342"
+  "MM\377\342MM\377\342MM\377\342MM\377\342MM\377\342MM\251\345NN'\342M"
+  "M\356\342MM\377\342MM\377\342MM\377\342MM\377\342MM\354\344II\34\0\0"
+  "\0\0\345OO\35\343MM\252\342MM\361\342MM\361\342MM\251\344II\34\0\0\0"
+  "\0"};
+
+const int red_dot_rgba_size = sizeof(red_dot_rgba);
