@@ -1,0 +1,41 @@
+/* GdkPixbuf RGBA C-Source image dump */
+
+#ifdef __SUNPRO_C
+#pragma align 4 (yellow_dot_rgba)
+#endif
+#ifdef __GNUC__
+unsigned const char yellow_dot_rgba[] __attribute__ ((__aligned__ (4))) =
+#else
+unsigned const char yellow_dot_rgba[] =
+#endif
+{ ""
+  /* Pixbuf magic (0x47646b50) */
+  "GdkP"
+  /* length: header (24) + pixel_data (256) */
+  "\0\0\1\30"
+  /* pixdata_type (0x1010002) */
+  "\1\1\0\2"
+  /* rowstride (32) */
+  "\0\0\0\40"
+  /* width (8) */
+  "\0\0\0\10"
+  /* height (8) */
+  "\0\0\0\10"
+  /* pixel_data: */
+  "\0\0\0\0\355\355\204\35\357\357\210\254\357\357\210\362\357\357\210\362"
+  "\357\357\210\257\362\362\211'\0\0\0\0\355\355\204\35\357\357\210\355"
+  "\357\357\210\377\357\357\210\377\357\357\210\377\357\357\210\377\357"
+  "\357\210\356\355\355\204\35\357\357\210\254\357\357\210\377\357\357\210"
+  "\377\357\357\210\377\357\357\210\377\357\357\210\377\357\357\210\377"
+  "\357\357\211\252\357\357\210\362\357\357\210\377\357\357\210\377\357"
+  "\357\210\377\357\357\210\377\357\357\210\377\357\357\210\377\357\357"
+  "\210\361\357\357\210\362\357\357\210\377\357\357\210\377\357\357\210"
+  "\377\357\357\210\377\357\357\210\377\357\357\210\377\357\357\210\360"
+  "\357\357\210\257\357\357\210\377\357\357\210\377\357\357\210\377\357"
+  "\357\210\377\357\357\210\377\357\357\210\377\356\356\210\251\362\362"
+  "\211'\357\357\210\356\357\357\210\377\357\357\210\377\357\357\210\377"
+  "\357\357\210\377\357\357\210\354\355\355\211\34\0\0\0\0\355\355\204\35"
+  "\357\357\211\252\357\357\210\361\357\357\210\361\356\356\210\251\355"
+  "\355\211\34\0\0\0\0"};
+
+const int yellow_dot_rgba_size = sizeof(yellow_dot_rgba);
